# postgres_explain_analyze_json_schema

./: .editorconfig  README.md  pyproject.toml  schema.json  schema.yaml
examples/ACCESS_METHOD/queries/all/tests/empty/system/: explain.yaml
examples/ACCESS_METHOD/queries/all/tests/omnibus/non_system/: explain.yaml
examples/AGGREGATE/queries/all_aggregates/tests/empty/system/: explain.yaml
examples/AGGREGATE/queries/all_aggregates/tests/omnibus/non_system/: explain.yaml
examples/CAST/queries/all/tests/empty/all/: explain.yaml
examples/CAST/queries/all/tests/omnibus/all/: explain.yaml
examples/CAST/queries/all/tests/sakila/all/: explain.yaml
examples/COLLATION/queries/all/tests/empty/basic/: explain.yaml
examples/COLLATION/queries/all/tests/omnibus/extended/: explain.yaml
examples/COLUMN/queries/informative/tests/sakila/all_in_public_schema/: explain.yaml
examples/CONVERSION/all/tests/empty/system/: explain.yaml
examples/CONVERSION/all/tests/omnibus/non_system/: explain.yaml
examples/EVENT_TRIGGER/all/tests/empty/none/: explain.yaml
examples/EVENT_TRIGGER/all/tests/omnibus/some/: explain.yaml
examples/EXTENSION/queries/all/tests/empty/system/: explain.yaml
examples/FOREIGN_DATA_WRAPPER/queries/tests/empty/none/: explain.yaml
examples/FOREIGN_DATA_WRAPPER/queries/tests/omnibus/nonzero/: explain.yaml
examples/USER_MAPPING/queries/tests/empty/none/: explain.yaml
examples/USER_MAPPING/queries/tests/omnibus/one/: explain.yaml
scripts/: collect_enums.sh  generate_initial_schema.py  to_json.py  to_yaml.py  validate_schema_against_corpus.py
(+226 files in other folders)
